--- a/index.html
+++ b/index.html
@@ -1,70 +1,56 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <title>QED QA</title>
-  </head>
-
-  <body>
-    <header>
-      <div class="inner">
-        <h1>QED QA</h1>
-        <h2>Quality Management</h2>
-      <!--  <a href="https://github.com/KennethML" class="button"><small>Follow me on</small> GitHub</a> -->
-      </div>
-    </header>
-
-    <div id="content-wrapper">
-      <div class="inner clearfix">
-        <section id="main-content">
-          <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to QED QA.</h3>
-
-<p>QED QA specialise in Software Quality Management and Testing. 
-We will engage with your development team to ensure that your software is fully tested and as defect free as possible. As you will see from our white papers on the subject there is no such thing as complete testing, but by taking a risk based approach we can endeavour to produce the optimum quality that can be attained.</p>
-
-<!--<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p> -->
-        </section>
-
-        <aside id="sidebar">
-
-
-          <p><a href="about.html">About</a> </p>
-          <p><a href="service.html">Services</a> </p>
-          <p><a href="mailto:contact@qed.qa?Subject=Contact%20page">Contact</a> </p>
-        </aside>
-      </div>
-    </div>
-
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   
-  </body>
+    <title>QED QA Ltd</title>
+
+  <!-- BOOTSTRAP -->
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+  <link rel="stylesheet" type="text/css" href="QED.css">
+  </head>
+  <body>
+    <div class="container">
+      <div id="header"> </div>
+      <div class="row">
+        <div class="col-md-4">
+          <br>
+          <table>
+            <tr><td><b>Q</b>uod</td><td>Which is what</td></tr>
+            <tr><td><b>E</b>rat</td><td>had to be</td></tr>
+            <tr><td><b>D</b>emonstrandum</td><td><b>Proven</b></td></tr>
+          </table>
+          <br>
+          <table>
+            <tr><td><b>Q</b>uality</td><td><i>noun.</i> the degree of <b>excellence</b></td></tr>
+            <tr><td><b>A</b>ssurance</td><td><i>noun.</i> freedom from doubt; <b>certainty</b></td></tr>
+          </table>
+         </div>
+        <div class="col-md-6">
+        <!--  <div id="navbar">
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="index.html">About</a></li>
+              <li><a href="mailto:contact@qed.qa?Subject=Contact%20page">Contact</a></li>
+            </ul>
+          </div>       -->
+          <h2>Testing Solutions</h2>
+          <p>QED QA specialise in Software Quality Management and Testing. We will engage with your development team to ensure that your software is fully tested and as defect free as possible. As you will see from our white papers on the subject there is no such thing as complete testing, but by taking a risk based approach we can endeavour to produce the optimum quality that can be attained.</P>
+        </div>
+      </div>
+    <div id="footer"> </div>   
+    </div>
+      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+      <!-- Include all compiled plugins (below), or include individual files as needed -->
+      <script src="js/bootstrap.min.js"></script>
+    </body>
 </html>
